--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,19 @@ name = "agenticrl-v1"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
-    "agentlightning[verl]>=0.1.2",
-    "bitsandbytes>=0.49.0",
-    "langchain-community>=0.4.1",
+    "agentlightning>=0.3.0",
+    "ipykernel>=7.1.0",
+    "langchain>=1.2.0",
     "langchain-openai>=1.1.6",
-    "langgraph>=1.0.5",
-    "numpy<2.3",
+    "pydantic>=2.12.5",
+    "pytest>=9.0.2",
+    "python-dotenv>=1.2.1",
+    "verl>=0.6.1",
     "vllm>=0.13.0",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+testpaths = ["tests"]
