--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "agentlightning>=0.3.0",
-    "flash-attn==2.7.4.post1",
+    "flash-attn>=2.8.3",
     "ipykernel>=7.1.0",
     "langchain>=1.2.0",
     "langchain-openai>=1.1.6",
@@ -14,9 +14,9 @@ dependencies = [
     "pydantic>=2.12.5",
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
-    "torch<=2.6.0",
+    "torch<=2.7.1",
     "verl>=0.6.1",
-    "vllm>=0.7.2",
+    "vllm>=0.10.0",
 ]
 
 [tool.pytest.ini_options]
@@ -25,12 +25,12 @@ testpaths = ["tests"]
 
 [tool.uv.sources]
 torch = [
-    { index = "pytorch-cu126", marker = "sys_platform == 'linux'"},
+    { index = "pytorch-cu128", marker = "sys_platform == 'linux'"},
 ]
 
 [[tool.uv.index]]
-name = "pytorch-cu126"
-url = "https://download.pytorch.org/whl/cu121"
+name = "pytorch-cu128"
+url = "https://download.pytorch.org/whl/cu128"
 explicit = true
 
 [tool.uv.extra-build-dependencies]
