--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "agentlightning>=0.3.0",
+    "agentlightning[verl]>=0.3.0",
     "flash-attn>=2.8.3",
     "ipykernel>=7.1.0",
     "langchain>=1.2.0",
