--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "agentlightning[verl]>=0.3.0",
+    "bitsandbytes>=0.49.0",
     "flash-attn>=2.8.3",
     "ipykernel>=7.1.0",
     "langchain>=1.2.0",
