--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "agentlightning[verl]>=0.3.0",
     "bitsandbytes>=0.49.0",
+    "diffusers>=0.36.0",
     "flash-attn>=2.8.3",
     "ipykernel>=7.1.0",
     "langchain>=1.2.0",
